# ler

./: .hdoc.toml  CMakeLists.txt  main.cpp  pack.cpp  vcpkg.json
assets/: common.hlsli  cull_dx.hlsl  cull_vk.hlsl  cullmesh.hlsl  encoder.metal  indirectmesh.hlsl  mesh.frag.glsl  mesh.vert.glsl  mesh_dx.hlsl  mesh_vk.hlsl  quad_dx.hlsl  quad_vk.hlsl  shaders.json  wireframe.json  wireframe_dx.hlsl  wireframe_vk.hlsl
res/: archive.fbs  ler.rc  scene.fbs
src/app/: app.hpp  desktop.cpp  desktop.hpp
src/camera/: camera.cpp  camera.hpp
src/img/: dds.cpp  dds.hpp  gli_format.cpp  ktx.cpp  ktx.hpp  loader.cpp  loader.hpp  tex.hpp
src/log/: log.hpp
src/packer/: archive.cpp  importer.hpp  main.cpp  material.cpp  mesh.cpp  texture.cpp
src/pass/: culling_command.hpp  deferred_scene.hpp  forward_indexed.hpp
src/render/: draw.hpp  graph.cpp  graph.hpp  graph_editor.cpp  graph_editor.hpp  mesh.cpp  mesh.hpp  mesh_list.cpp  mesh_list.hpp  pass.hpp  resource_mgr.cpp  resource_mgr.hpp
src/rhi/: bindless.cpp  bindless.hpp  common.cpp  d3d12.hpp  enum.hpp  format.cpp  library.cpp  library.hpp  metal.hpp  queue.cpp  queue.hpp  ref.hpp  rhi.hpp  storage.cpp  storage.hpp  vulkan.hpp
src/rhi/d2d12/: d3d12_command.cpp  d3d12_descriptor.cpp  d3d12_device.cpp  d3d12_format.cpp  d3d12_imgui.cpp  d3d12_library.cpp  d3d12_pipeline.cpp  d3d12_storage.cpp  d3d12_swapchain.cpp  d3d12_texture.cpp
src/rhi/metal/: metal_command.cpp  metal_device.cpp  metal_encoder.h  metal_format.cpp  metal_glfw.mm  metal_imgui.cpp  metal_imgui.mm  metal_pipeline.cpp  metal_runtime.cpp  metal_storage.cpp  metal_swapchain.cpp  metal_texture.cpp
src/rhi/shader/: compiler.cpp
src/rhi/vulkan/: vulkan_command.cpp  vulkan_descriptor.cpp  vulkan_device.cpp  vulkan_format.cpp  vulkan_imgui.cpp  vulkan_library.cpp  vulkan_pipeline.cpp  vulkan_storage.cpp  vulkan_swapchain.cpp  vulkan_texture.cpp
src/scene/: scene.cpp  scene.hpp
src/sys/: bundle.h  file.cpp  file.hpp  ioring.cpp  ioring.hpp  mem.cpp  mem.hpp  mpsc.hpp  mpsc.inl  platform.hpp  task.hpp  thread.hpp  utils.cpp  utils.hpp
